feat: enforce competitive lobby and team state